--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.23.1",
     "firebase": "^9.10.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "next": "12.3.0",
     "node-sass": "^7.0.3",
     "react": "18.2.0",
