--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^4.23.1",
+    "classnames": "^2.3.2",
     "firebase": "^9.10.0",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
