--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "deploy": "firebase deploy --only functions, hosting"
   },
   "dependencies": {
+    "algoliasearch": "^4.14.2",
     "antd": "^4.23.1",
     "classnames": "^2.3.2",
-    "firebase": "^9.10.0",
+    "firebase": "9.14.0",
     "firebase-admin": "^11.2.0",
     "firebase-functions": "^4.0.1",
     "formik": "^2.2.9",
@@ -22,6 +23,7 @@
     "node-sass": "^7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-instantsearch-hooks-web": "^6.38.1",
     "react-slick": "^0.29.0",
     "sass": "^1.54.9",
     "slick-carousel": "^1.8.1",
